--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="459.0" prefWidth="529.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.gamebuilder.MainPaneController">
+<BorderPane prefHeight="459.0" prefWidth="529.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.gamebuilder.MainPaneController">
    <top>
 <MenuBar BorderPane.alignment="CENTER">
   <menus>
@@ -114,12 +114,15 @@
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <Button fx:id="addIItemButton" layoutX="29.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleAddItemButton" text="Add Item" />
-                        <Button fx:id="removeItemButton" layoutX="29.0" layoutY="68.0" mnemonicParsing="false" onAction="#handleRemoveItemButton" text="Remove Item" />
-                        <Button fx:id="changeItemImageButton" layoutX="34.0" layoutY="119.0" mnemonicParsing="false" onAction="#handleChangeItemImageButton" text="Change Item Image" />
-                        <Button fx:id="additemButtonBlank" layoutX="39.0" layoutY="251.0" mnemonicParsing="false" onAction="#handleAdditemButtonBlank" text="Add Item" />
-                        <TextField fx:id="itemNameTextField" layoutX="220.0" layoutY="251.0" />
-                        <Label layoutX="156.0" layoutY="255.0" text="Item name" />
+                        <Button fx:id="removeItemButton" layoutX="29.0" layoutY="326.0" mnemonicParsing="false" onAction="#handleRemoveItemButton" text="Remove Item" />
+                        <Button fx:id="changeItemImageButton" layoutX="34.0" layoutY="293.0" mnemonicParsing="false" onAction="#handleChangeItemImageButton" text="Change Item Image" />
+                        <Button fx:id="additemButtonBlank" layoutX="182.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleAdditemButtonBlank" text="Add Item" />
+                        <TextField fx:id="itemNameTextField" layoutX="364.0" layoutY="19.0" />
+                        <Label layoutX="272.0" layoutY="23.0" text="Item name" />
                         <Label layoutX="170.0" layoutY="290.0" />
+                        <Line endX="430.0" layoutX="99.0" layoutY="106.0" startX="-100.0" />
+                        <Label layoutX="189.0" layoutY="68.0" text="Select an Item to Edit:" />
+                        <ChoiceBox fx:id="itemChoiceBox" layoutX="326.0" layoutY="64.0" prefWidth="150.0" />
                      </children>
                   </AnchorPane>
               </content>
