--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -125,6 +126,10 @@
                         <ChoiceBox fx:id="itemChoiceBox" layoutX="326.0" layoutY="64.0" prefWidth="150.0" />
                         <Label layoutX="34.0" layoutY="121.0" text="Current Item: " />
                         <Label fx:id="currentItemLabel" layoutX="107.0" layoutY="121.0" text="no item selected" />
+                        <CheckBox fx:id="itemVisibleCheckBox" layoutX="34.0" layoutY="154.0" mnemonicParsing="false" onAction="#handleItemVisibleCheckBox" text="Item Visible" />
+                        <Label layoutX="34.0" layoutY="197.0" text="Current Image:" />
+                        <Label layoutX="121.0" layoutY="197.0" text="No Image Selected" />
+                        <Button layoutX="268.0" layoutY="193.0" mnemonicParsing="false" text="Select an Image" />
                      </children>
                   </AnchorPane>
               </content>
