--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -114,9 +114,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="addIItemButton" layoutX="29.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleAddItemButton" text="Add Item" />
                         <Button fx:id="removeItemButton" layoutX="29.0" layoutY="326.0" mnemonicParsing="false" onAction="#handleRemoveItemButton" text="Remove Item" />
-                        <Button fx:id="changeItemImageButton" layoutX="34.0" layoutY="293.0" mnemonicParsing="false" onAction="#handleChangeItemImageButton" text="Change Item Image" />
                         <Button fx:id="additemButtonBlank" layoutX="182.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleAdditemButtonBlank" text="Add New Item" />
                         <TextField fx:id="itemNameTextField" layoutX="364.0" layoutY="19.0" />
                         <Label layoutX="272.0" layoutY="23.0" text="New item name:" />
@@ -125,10 +123,10 @@
                         <Label layoutX="189.0" layoutY="68.0" text="Select an Item to Edit:" />
                         <ChoiceBox fx:id="itemChoiceBox" layoutX="326.0" layoutY="64.0" prefWidth="150.0" />
                         <Label layoutX="34.0" layoutY="121.0" text="Current Item: " />
-                        <Label fx:id="currentItemLabel" layoutX="107.0" layoutY="121.0" text="no item selected" />
+                        <Label fx:id="currentItemLabel" layoutX="107.0" layoutY="121.0" text="No item selected." />
                         <CheckBox fx:id="itemVisibleCheckBox" layoutX="34.0" layoutY="154.0" mnemonicParsing="false" onAction="#handleItemVisibleCheckBox" text="Item Visible" />
                         <Label layoutX="34.0" layoutY="197.0" text="Current Image:" />
-                        <Label fx:id="itemImageLabel" layoutX="121.0" layoutY="197.0" text="No Image Selected" />
+                        <Label fx:id="itemImageLabel" layoutX="121.0" layoutY="197.0" text="No image selected." />
                         <Button fx:id="selectAnItemImageButton" layoutX="268.0" layoutY="193.0" mnemonicParsing="false" onAction="#handleSelectAnItemImageButton" text="Select an Image" />
                      </children>
                   </AnchorPane>
